--- a/firebase.json
+++ b/firebase.json
@@ -8,8 +8,10 @@
     ],
     "appAssociation": "AUTO",
     "rewrites": [ 
-      { "source": "/**", "dynamicLinks": true },
-      { "source": "/api/**", "dynamicLinks": true }
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
