--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.5",
+    "express-session": "^1.17.3",
     "firebase": "^9.6.11",
     "firebaseui": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
