--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql": "^2.18.1",
     "mysql-upgrade": "^0.1.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "cookie-parser": "^1.4.6"
   }
 }
