--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-session": "^1.17.3",
     "firebase": "^9.6.11",
     "firebaseui": "^6.0.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "mysql": "^2.18.1",
